force-app/main/default/objects/Technician__c/Technician__c.object-meta.xml
<CustomObject>
    <description>수리 기사 정보를 관리하는 오브젝트입니다.</description>
    <label>Technician</label>
    <nameField>
        <label>Technician Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technicians</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>