force-app/main/default/objects/Technician__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>기술자가 담당하는 지역입니다.</description>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>