force-app/main/default/objects/Technician__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <description>기술자의 전문 분야입니다.</description>
    <label>Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>