force-app/main/default/objects/Technician__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>기술자와 연결된 사용자 계정입니다.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Technicians</relationshipName>
    <type>Lookup</type>
</CustomField>